--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -178,7 +178,8 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #e9a6bf;
+  background: #f4bcac;
+  color: #414141;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -212,7 +213,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: rgb(255, 255, 255);
+  background: linear-gradient(#f4bcac,#e9a6bf);
   width: 100%;
   height: 60px;
   line-height: 60px;
